fix：修复接口权限冲突
