# controller/routers/settings.go
@@ -14,7 +14,7 @@ func initSettingsRouters(router *gin.Engine) {
 		// 上传 Logo
 		settings.POST("/logoUpload", controller.Settings.UploadLogo)
 		// 获取 Logo（不需要认证，不需要权限）
-		settings.GET("/logo", controller.Settings.GetLogo)
+		settings.GET("/site/logo", controller.Settings.GetLogo)
 		// 修改配置
 		settings.PUT("", controller.Settings.UpdateSettings)
 		// 发送邮箱测试
@@ -23,5 +23,7 @@ func initSettingsRouters(router *gin.Engine) {
 		settings.POST("/test/ldapLogin", controller.Settings.LdapLogin)
 		// 发送短信测试
 		settings.POST("/test/smsSend", controller.Settings.SendSms)
+		// 证书校验
+		settings.POST("/test/certTest", controller.Settings.CertTest)
 	}
 }
