# middleware/casbin.go
@@ -61,7 +61,7 @@ func PermissionCheck() gin.HandlerFunc {
 			"/api/v1/user/info",                 // 用户登录成功后获取用户信息接口
 			"/api/v1/user/avatarUpload",         // 用户头像上传接口
 			"/swagger/",                         // Swagger 接口
-			"/api/v1/settings/logo",             // 获取 Logo
+			"/api/v1/settings/site/logo",        // 获取 Logo
 			"/api/v1/sms/huawei/callback",       // 华为云短信回调接口
 			"/api/v1/sms/reset_password",        // 获取重置密码验证码
 			"/api/v1/reset_password",            // 密码自助重置接口
